# cncld

./: .env  .gitignore  .gitmodules  airflow.cfg  package-lock.json  package.json  requirements.txt
.github/workflows/: test.yml
api/: blockchain.py  index.py
app/: utils.ts
app/components/: ApiDisplay.tsx  RandomCancel.tsx
coin/: foundry.toml  package-lock.json  package.json
coin/cache/: solidity-files-cache.json
coin/script/: CNCLCoinDeploy.s.sol  CancelCoin.s.sol
coin/src/: CNCLCoin.sol  CancelCoin.sol
coin/test/: CNCLCoin.t.sol  CancelCoin.t.sol
data/: compose.yaml  examplars.yaml  mediawiki_import.ipynb  pyproject.toml
data/pipelines/: airflow.cfg  airflow.db-shm  airflow.db-wal  ingest_wikipedia.py  pyproject.toml  simple_auth_manager_passwords.json.generated
data/pipelines/config/: airflow.cfg
data/pipelines/dags/: category_pipeline.py  infer_batch_pipeline.py  local_upload_pipeline.py  multistream_index_pipeline.py  pageview_composite_pipeline.py  pageview_pipeline.py
data/workspace/: base_statistics.ipynb  infer_judgement.ipynb  mediawiki_import.ipynb  schema.sql  top_targets.ipynb
scripts/: mint_burn_example.py
web/: Procfile  next.config.js  package-lock.json  package.json  requirements.txt
web/.next/: BUILD_ID  build-manifest.json  export-detail.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
web/.next/dev/: trace  (+2 more)
web/api/: index.py
web/app/: layout.tsx  page.tsx  utils.ts
web/nextjs-flask/: next.config.js  package-lock.json  package.json
(+218 files in other folders)
